2010-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/liblnk/lnklib.S, shared/liblnk/pmon.S, shared/liblnk/regs.h,
	shared/startup/idtmem.S, shared/startup/idttlb.S: New files.

2010-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/exception.S: rbtx4925, rbtx4938, and hurricane had very
	similar versions of exception. Now all use shared/irq/exception.S

2010-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/exception.S: New file.

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* shared/gdbstub/mips-stub.c: Remove warnings.

2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/gdbstub/mips-stub.c: Add missing prototypes.

2007-09-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/gdbstub/mips-stub.c: Remove incorrect and unneccessary
	prototype of printk.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* jmr3904/tools/runtest: Do not run pppd.exe from batch mode script.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-09-14	Joel Sherrill <joel@OARcorp.com>

	* shared/gdbstub/mips-stub.c: Removed warnings.

2006-03-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: AC_CONFIG_SRCDIR(csb350).
	* acinclude.m4: Regenerate.
	* README: Remove (obsolete).
	* acinclude.m4: Remove p4000.

2005-02-24	Jay Monkman <jtm@lopingdog.com>

	* acinclude.m4: Added csb350 to list of BSPs.
	* csb350/Makefile.am, csb350/README, csb350/bsp_specs,
	csb350/configure.ac, csb350/times, csb350/clock/clockdrv.c,
	csb350/console/console-io.c, csb350/include/bsp.h,
	csb350/include/tm27.h, csb350/network/network.c, csb350/start/regs.S,
	csb350/start/start.S, csb350/startup/bspclean.c,
	csb350/startup/bspstart.c, csb350/startup/linkcmds,
	csb350/timer/timer.c: New BSP.

2004-09-24	Ralf Corsepius <ralf_corsepius@rtems.org>
